[tool.poetry]
name = "billing-task"
version = "0.1.0"
description = ""
authors = ["Roman Voropaev"]

[tool.poetry.dependencies]
python = "^3.9"
aiopg = "^1.3.2"
starlette = "^0.16.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
pytest-asyncio = "^0.16.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.9.3"
mypy = "^0.910"
black = "^21.9b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
